HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationFieldTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the ImplementationFieldTypeMismatch rejected-source specimen.

expectedDiagnostic("E-TYP-2404", "rule.14.Impl-Field-Type-Err")
